Use FFM API instead of JNI